Changelog
=========

1.0a1 - unreleased
------------------

- Initial code, largely based on collective.recipe.solrinstance.
  [hannosch]